@@ -1,7 +1,5 @@
 package com.c4_soft.springaddons.samples.webmvc_keycloakauthenticationtoken;
 
-import java.util.stream.Collectors;
-
 import org.keycloak.adapters.springsecurity.token.KeycloakAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Service;
@@ -17,8 +15,8 @@ public class MessageService {
 		return String
 				.format(
 						"Hello %s! You are granted with %s.",
-						who.getName(),
-						who.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
+						who.getAccount().getKeycloakSecurityContext().getIdToken().getPreferredUsername(),
+						who.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList());
 	}
 
 }
